# seedr-tg

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_script.py
frontend/: README.md  package-lock.json
frontend/app/: layout.tsx  page.tsx
src/seedr_tg/: __init__.py  config.py  logging.py  main.py
src/seedr_tg/db/: __init__.py  models.py  repository.py
src/seedr_tg/direct/: __init__.py  downloader.py  handler.py  renamer.py  telegram_uploader.py
src/seedr_tg/seedr/: __init__.py  client.py  poller.py
src/seedr_tg/status/: __init__.py  outcome.py  template.py  unified.py
src/seedr_tg/telegram/: __init__.py  bot_app.py  media_rename.py  uploader.py
src/seedr_tg/web/: __init__.py  api.py
src/seedr_tg/worker/: __init__.py  downloads.py  progress.py  queue_runner.py
tests/: test_direct_rename_service.py  test_media_rename_command_parsing.py  test_progress.py  test_queue_runner.py  test_queue_torrent_source.py  test_seedr_rules.py  test_telegram_uploader_caption.py  test_telegram_uploader_filename.py  test_telegram_uploader_thumbnail.py  test_transfer_reliability.py
