[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedr-tg"
version = "0.1.0"
description = "Seedr.cc to Telegram relay bot with persistent queueing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0,<26.0.0",
    "httpx>=0.28.1,<0.29.0",
    "motor>=3.7.0,<4.0.0",
    "pydantic>=2.11.1,<3.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "python-telegram-bot>=22.0,<23.0",
    "seedrcc>=2.1.0,<3.0.0",
    "telethon>=1.39.0,<2.0.0",
    "cryptg>=0.5.0,<0.6.0",
    "tgcrypto>=1.2.5,<2.0.0",
    "uvloop>=0.21.0,<0.22.0",
]

[project.optional-dependencies]
dev = [
    "mongomock-motor>=0.0.36,<0.0.37",
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "ruff>=0.11.0,<0.12.0",
]

[project.scripts]
seedr-tg = "seedr_tg.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
